added card editing

--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,9 @@
 <!-- ЗАДАНИЕ
 
 	- Сделать возможность передвигать блоки с текстом и вставлять ссылки на блоки с текстом внутри редактора
-	- Сделать возможность менять картинки
-	- Сделать возможность менять текст
-	- Сделать отдельный редактор вебсайта на html и javascript 
+	- Сделать возможность менять картинки ✓
+	- Сделать возможность менять текст ✓
+	- Сделать отдельный редактор вебсайта на html и javascript ✓
 	- Cделать чтобы редактор загружал вывод куда ни будь в качестве одного html файла
 	- Добавить модуль обратной связи
 	- Зафиксировать масштаб в 110% для 1024 ширины
