added card editing

--- a/src/index.html
+++ b/src/index.html
@@ -76,6 +76,8 @@
 		</div>
 
 	</div>
-	<script type="text/javascript" src="index.js"></script>
+	<script type="text/javascript" src="SiteBuilderFrameworkConfiguration.js"></script>
+	<script type="text/javascript" src="SiteBuilderFrameworkTemplateEngine.js"></script>
+	<script type="text/javascript" src="SiteBuilderFramework.js"></script>
 </body>
 </html>
