--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 <body>
 	<div class="head-container max-1000" id="top_nav">
 	</div>
-	<div class="slide-container" style="margin-top:50px;" id="first_slide">
+	<div class="slide-container" id="first_slide">
 	</div>
 	<div class="slide-container" id="second_slide">
 	</div>
@@ -18,9 +18,9 @@
 	</div>
 	<div class="slide-container" id="fourth_slide">
 	</div>
-	<div class="slide-container" style="margin-top:50px;" id="fifth_slide">
+	<div class="slide-container" style="margin-top:20px;" id="fifth_slide">
 	</div>
-	<div class="slide-container" style="margin-top:50px;">
+	<div class="slide-container" style="margin-top:20px;">
 		<div class="row">
 			<div class="col-xs-12 text-center">
 				<hr>
