--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Дом План Строй</title>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="bootstrap.min.css" 	rel="stylesheet">
   <link href="style.css" 			rel="stylesheet">
@@ -28,7 +29,7 @@
 				<hr>
 			</div>
 		</div>
-		<div class="row" style="width:70%;margin:0 auto;padding-bottom: 100px;">
+		<div class="row" style="width:70%;margin:0 auto;padding-bottom: 100px;max-width: 970px;">
 
 			<form role="form" id="contact-form" class="contact-form">
 	            <div class="row">
